--- a/code/android/src/main/android/res/values/strings.xml
+++ b/code/android/src/main/android/res/values/strings.xml
@@ -11,4 +11,13 @@
     <string name="internal_t_count">Transactions:</string>
     <string name="internal_tag_count">Tags:</string>
     <string name="not_synchronized">Never</string>
+    <string name="transaction_text">Text:</string>
+    <string name="transaction_date">Date:</string>
+    <string name="transaction_amount">Amount:</string>
+    <string name="transaction_change_date">Change date:</string>
+    <string name="transaction_average">Average consumption</string>
+    <string name="per_day">Per day</string>
+    <string name="per_week">Per week</string>
+    <string name="last_transactions">Last transactions</string>
+    <string name="category">Category</string>
 </resources>
