--- a/code/android/src/main/android/res/values/strings.xml
+++ b/code/android/src/main/android/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="invalid_amount">Invalid amount</string>
     <string name="transaction_updated">Transaction updated</string>
     <string name="unsynced_count">Not synchronized</string>
+    <string name="clear_db">Clear internal database</string>
+    <string name="db_cleared">Internal database has been emptied</string>
 </resources>
