--- a/code/android/src/main/android/res/values/strings.xml
+++ b/code/android/src/main/android/res/values/strings.xml
@@ -4,8 +4,12 @@
     <string name="overview">Overview</string>
     <string name="synchronize">Synchronize</string>
     <string name="transactions">Transactions</string>
+    <string name="categories">Categories</string>
+    <string name="category_name">Category name</string>
+    <string name="icon">Icon</string>
     <string name="transactions_no_items">No transactions to display</string>
     <string name="wait">Synchronizing transactions...</string>
+    <string name="icon_prompt">Choose an icon</string>
     <string name="category_prompt">Choose a category</string>
     <string name="last_synchronized">Synchronized</string>
     <string name="internal_t_count">Transactions</string>
