Quick hack for suggestion

--- a/code/android/src/main/android/res/values/strings.xml
+++ b/code/android/src/main/android/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="clear_db">Clear internal database</string>
     <string name="db_cleared">Internal database has been emptied</string>
     <string name="untagged_count">Not tagged</string>
+    <string name="suggested_tag">Suggested tag</string>
 </resources>
