Changed to new category activity to display icons in a gridview

--- a/code/android/src/main/android/res/values/strings.xml
+++ b/code/android/src/main/android/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="transactions">Transactions</string>
     <string name="categories">Categories</string>
     <string name="category_name">Category name</string>
+    <string name="category_icon">Category icon</string>
     <string name="icon">Icon</string>
     <string name="transactions_no_items">No transactions to display</string>
     <string name="wait">Synchronizing transactions...</string>
