--- a/code/android/src/main/android/res/values/strings.xml
+++ b/code/android/src/main/android/res/values/strings.xml
@@ -35,4 +35,8 @@
     <string name="untagged_count">Not tagged</string>
     <string name="suggested_tag">Suggested tag</string>
     <string name="notification_title">New transaction!</string>
+    <string name="server_unavailable">Could not synchronize. Server is
+        unavailable.
+    </string>
+    <string name="confirm">OK</string>
 </resources>
