First try at improving logic in EditTransactionActivity

--- a/code/android/src/main/android/res/values/strings.xml
+++ b/code/android/src/main/android/res/values/strings.xml
@@ -40,4 +40,5 @@
     </string>
     <string name="confirm">OK</string>
     <string name="notification">You have %s new transaction(s)</string>
+    <string name="not_tagged">Ukategorisert</string>
 </resources>
