--- a/code/android/src/main/android/res/values/strings.xml
+++ b/code/android/src/main/android/res/values/strings.xml
@@ -45,4 +45,18 @@
     </string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string-array name="months">
+        <item>January</item>
+        <item>February</item>
+        <item>March</item>
+        <item>April</item>
+        <item>May</item>
+        <item>June</item>
+        <item>July</item>
+        <item>August</item>
+        <item>September</item>
+        <item>October</item>
+        <item>November</item>
+        <item>December</item>
+    </string-array>
 </resources>
