--- a/android/src/main/android/res/values/strings.xml
+++ b/android/src/main/android/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="suggested_tag">Suggested tag</string>
     <string name="notification_title">New transaction!</string>
     <string name="new_transaction">New transaction</string>
+    <string name="add_transaction">Add transaction</string>
     <string name="server_unavailable">Could not synchronize. Server is
         unavailable.
     </string>
@@ -63,4 +64,5 @@
     <string name="invalid_tag_name">Invalid tag name</string>
     <string name="transaction_added">Transaction added</string>
     <string name="pie_chart">Pie chart</string>
+    <string name="save">Save</string>
 </resources>
