--- a/android/src/main/android/res/values-no/strings.xml
+++ b/android/src/main/android/res/values-no/strings.xml
@@ -65,4 +65,5 @@
     <string name="transaction_added">Transaksjon lagt til</string>
     <string name="pie_chart">Kakediagram</string>
     <string name="save">Lagre</string>
+    <string name="total">Sum</string>
 </resources>
