--- a/android/src/main/android/res/values-no/strings.xml
+++ b/android/src/main/android/res/values-no/strings.xml
@@ -46,6 +46,9 @@
     <string name="auto_tag" formatted="false">Det er %s andre transaksjoner nøyaktig lik denne og %s lignende.
         Hvilke vil du kategorisere i tillegg til denne?
     </string>
+    <string name="auto_tag_exact">Det er %s andre transaksjoner nøyaktig lik denne. Hvilke vil du kategorisere i tillegg
+        til denne?
+    </string>
     <string name="tag_exact">De som er like</string>
     <string name="tag_all">Like og lignende</string>
     <string name="tag_single">Kun denne</string>
@@ -68,4 +71,5 @@
     <string name="pie_chart">Kakediagram</string>
     <string name="save">Lagre</string>
     <string name="total">Sum</string>
+    <string name="tagging">Kategoriserer transaksjoner...</string>
 </resources>
