Counter on similartransaction is now centered. Added menu options to selectall and unselectall similartransactions.

--- a/android/src/main/android/res/values-no/strings.xml
+++ b/android/src/main/android/res/values-no/strings.xml
@@ -68,4 +68,7 @@
     <string name="pie_chart">Kakediagram</string>
     <string name="save">Lagre</string>
     <string name="total">Sum</string>
+    <string name="selected" formatted="false">%s av %s valgt</string>
+    <string name="select_all">Velg alle</string>
+    <string name="unselect_all">Velg ingen</string>
 </resources>
