--- a/android/src/main/android/res/values-no/strings.xml
+++ b/android/src/main/android/res/values-no/strings.xml
@@ -47,11 +47,15 @@
     <string name="auto_tag" formatted="false">Det er %s andre transaksjoner nøyaktig lik denne og %s lignende.
         Hvilke vil du kategorisere i tillegg til denne?
     </string>
-    <string name="auto_tag_exact">Det er %s andre transaksjoner nøyaktig lik denne. Hvilke vil du kategorisere i tillegg
-        til denne?
+    <string name="auto_tag_exact">Det finnes %s andre transaksjoner nøyaktig lik denne. Hvilke vil du kategorisere i
+        tillegg til denne?
+    </string>
+    <string name="auto_tag_similar">Det finnes %s lignende transaksjoner. Hvilke vil du kategorisere i tillegg til
+        denne?
     </string>
     <string name="tag_exact">De som er like</string>
     <string name="tag_all">Like og lignende</string>
+    <string name="tag_similar">Lignende</string>
     <string name="tag_single">Kun denne</string>
     <string-array name="months">
         <item>Januar</item>
