--- a/android/src/main/android/res/values/strings.xml
+++ b/android/src/main/android/res/values/strings.xml
@@ -47,11 +47,15 @@
     <string name="auto_tag" formatted="false">There %s other exact matches for this transaction and %s similar ones.
         Which ones do you want to tag in addition to this one?
     </string>
-    <string name="auto_tag_exact">There %s other exact matches for this transaction. Which ones do you want to tag in
-        addition to this one?
+    <string name="auto_tag_exact">There are %s other exact matches for this transaction. Which ones do you want to
+        tag in addition to this one?
+    </string>
+    <string name="auto_tag_similar">There are %s similar matches for this transaction. Which ones do you want to tag
+        in addition to this one?
     </string>
     <string name="tag_exact">Exact matches</string>
     <string name="tag_all">Exact and similar matches</string>
+    <string name="tag_similar">Similar matches</string>
     <string name="tag_single">Only this one</string>
     <string-array name="months">
         <item>January</item>
