--- a/android/src/main/android/res/values-no/strings.xml
+++ b/android/src/main/android/res/values-no/strings.xml
@@ -80,4 +80,5 @@
     <string name="selected" formatted="false">%s av %s valgt</string>
     <string name="select_all">Velg alle</string>
     <string name="unselect_all">Velg ingen</string>
+    <string name="menu_suggest">Find forslag</string>
 </resources>
