--- a/android/src/main/android/res/values/strings.xml
+++ b/android/src/main/android/res/values/strings.xml
@@ -80,5 +80,5 @@
     <string name="selected" formatted="false">%s of %s selected</string>
     <string name="select_all">Select all</string>
     <string name="unselect_all">Unselect all</string>
-
+    <string name="menu_suggest">Find suggestions</string>
 </resources>
