--- a/android/src/main/android/res/values-no/strings.xml
+++ b/android/src/main/android/res/values-no/strings.xml
@@ -81,4 +81,5 @@
     <string name="select_all">Velg alle</string>
     <string name="unselect_all">Velg ingen</string>
     <string name="menu_suggest">Finn forslag til kategorier</string>
+    <string name="fetching_tags">Henter forslag...</string>
 </resources>
