--- a/android/src/main/android/res/values/strings.xml
+++ b/android/src/main/android/res/values/strings.xml
@@ -81,5 +81,5 @@
     <string name="select_all">Select all</string>
     <string name="unselect_all">Unselect all</string>
     <string name="menu_suggest">Find tag suggestions</string>
-    <string name="fetching_tags">Retrieving suggestions</string>
+    <string name="fetching_tags">Retrieving suggestions...</string>
 </resources>
