--- a/android/src/main/android/res/values-nb/strings.xml
+++ b/android/src/main/android/res/values-nb/strings.xml
@@ -82,4 +82,5 @@
     <string name="unselect_all">Velg ingen</string>
     <string name="menu_suggest">Finn forslag til kategorier</string>
     <string name="fetching_tags">Henter forslag...</string>
+    <string name="transaction_count" formatted="false">%s transaksjon(er)</string>
 </resources>
