--- a/android/src/main/android/res/values/strings.xml
+++ b/android/src/main/android/res/values/strings.xml
@@ -85,5 +85,5 @@
     <string name="transaction_count" formatted="false">%s transaction(s)</string>
     <string name="username">Username</string>
     <string name="settings">Settings</string>
-
+    <string name="suggestions_notfound">Sorry. Could not find any suggestions.</string>
 </resources>
