--- a/android/src/main/android/res/values/strings.xml
+++ b/android/src/main/android/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="invalid_amount">Invalid amount</string>
     <string name="transaction_updated">Transaction updated</string>
     <string name="unsynced_count">Changes not synchronized</string>
-    <string name="clear_db">Clear internal database</string>
+    <string name="clear_db">Clear database</string>
     <string name="db_cleared">Internal database has been emptied</string>
     <string name="untagged_count">Not tagged</string>
     <string name="suggested_tag">Suggested tag</string>
